Fixed horintal align of up and down arrows for the hour input in reminder widget.

--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -811,7 +811,7 @@ TODO: Example needed
   > .reminder--up,
   > .reminder--down {
       margin-left: -@grid-horizontal / 2; // [2]
-      padding-left: 20px;                 // [2]
+      padding-left: 21px;                 // [2]
       margin-right: -7px;                 // [2]
   }
   &~ .reminder--time-wrapper {
